--- a/Web/Stylesheet/butacas.css
+++ b/Web/Stylesheet/butacas.css
@@ -27,8 +27,7 @@ a .butacaReservada, a .butacaLibre, a .butacaOcupada{
 	background-image:url(../imagenes/butacaOcupada.png);
 }
 #butacasAnfiteatro{
-	border: 4px solid black;
-	border-bottom: 0px solid black;
+	border-bottom: 2px solid black;
 	position:absolute;
 	height:40%;
 	width:100%;
@@ -36,8 +35,8 @@ a .butacaReservada, a .butacaLibre, a .butacaOcupada{
 	left:0px;
 }
 #butacasPlatea{
-	border: 4px solid black;
-	border-right: 0px solid black;
+	border-left: 2px solid black;
+	border-right: 2px solid black;
 	position:absolute;
 	height:60%;
 	width:70%;
@@ -46,7 +45,6 @@ a .butacaReservada, a .butacaLibre, a .butacaOcupada{
 	vertical-align:bottom;
 }
 #butacasPalco1{
-	border: 4px solid black;
 	position:absolute;
 	height:30%;
 	width:15%;
@@ -54,8 +52,6 @@ a .butacaReservada, a .butacaLibre, a .butacaOcupada{
 	left:85%;
 }
 #butacasPalco2{
-	border: 4px solid black;
-	border-right: 0px solid black;
 	position:absolute;
 	height:30%;
 	width:15%;
@@ -63,8 +59,7 @@ a .butacaReservada, a .butacaLibre, a .butacaOcupada{
 	left:0px;
 }
 #butacasPalco3{
-	border: 4px solid black;
-	border-bottom: 0px solid black;
+	border-bottom: 2px solid black;
 	position:absolute;
 	height:30%;
 	width:15%;
@@ -72,9 +67,7 @@ a .butacaReservada, a .butacaLibre, a .butacaOcupada{
 	left:85%;
 }
 #butacasPalco4{
-	border: 4px solid black;
-	border-right: 0px solid black;
-	border-bottom: 0px solid black;
+	border-bottom: 2px solid black;
 	position:absolute;
 	height:30%;
 	width:15%;
