--- a/Web/Stylesheet/principal.css
+++ b/Web/Stylesheet/principal.css
@@ -7,7 +7,6 @@
 	cursor:default;
 }
 #capacontenedora{
-	background-color:#6F6;
 	margin-top: 0px;
 	margin-right: 0px;
 	margin-left: -480px;
@@ -15,13 +14,7 @@
 	position:absolute;
 	top: 0px;
 	left:50%;
-	height:900px;	
-	}
-#capatitulo{
-	background-color:#06F;
-	position:relative;
-	margin-top: 0px;
-	height:200px;
+	height:700px;	
 	}
 #capamenu{
 	background-color:#F36;
@@ -65,24 +58,24 @@
 	/*src:"";*/
 }
 #capacalendarioyhora{
-	border: 4px solid black;
-	border-right: 0px solid black;
 	background-color:#63C;
 	position:relative;
 	height:350px;
 	width:216px;
-	margin-left:0px;	
-	margin-top:-16px;
-	top:0px;		
+	top:-3px;		
 }
 #contenedoraCapaCalendario{
+	border: 4px solid black;
 	background-color:#CF6;
 	position:relative;
 	height:350px;
-	width:960px;
-	margin-left:0px;	
-	margin-top:50px;
-	top:0px;		
+	width:952px;
+	margin-left:2px;	
+	margin-top:30px;
+	top:0px;
+	box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+	-moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+	-webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);			
 }
 #capahoras{	
 	position: relative;
@@ -91,12 +84,12 @@
 	left: 45px;
 }
 #capaobras{
-	border: 4px solid black;
+	border-left: 4px solid black;
 	background-color:#F00;
 	position: absolute;
 	width: 732px;
 	height:350px;	
-	left: 220px;
+	left: 216px;
 }
 #capatituloobra{
 	margin: 3px;
@@ -119,7 +112,6 @@
 	top: 40px;
 	left: 150px;
 }
-
 /*menú*/
 header{	
 	width:960px;
@@ -133,19 +125,41 @@ div.contenedor{
 	transition: height .4s;
 }
 div#uno{
-	background-color: #333;
+	background-color: #000;
+	border-top-left-radius: 50%;
 }
 div#dos{
-	background-color: #333;
+	background-color: #000;
 }
 div#tres{
-	background-color: #333;
+	background-color: #000;
 }
 div#cuatro{
-	background-color: #333;
+	background-color: #000;
 }
 div#cinco{
-	background-color: #333;
+	background-color: #000;
+	border-top-right-radius: 50%;
+}
+/*footer*/
+#capaFooter{
+	position:absolute;
+	background-color:#C00;
+	bottom:0px;
+	height:50px;
+	width:960px;
+	margin-bottom:30px;
+	border-bottom-right-radius: 4em;
+	border-bottom-left-radius: 4em;
+	border-top-color:#000;
+	border-top-style:solid;
+	border-top-width:4px;
+	border-bottom-color:#000;
+	border-bottom-style:solid;
+	border-bottom-width:4px;
+	box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+	-moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+	-webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
 }
 /*efectos */
 img.icon{
