--- a/Web/Stylesheet/reservas.css
+++ b/Web/Stylesheet/reservas.css
@@ -6,11 +6,13 @@
 	position: relative;
 	top:0px;
 	left:0px;
+	height:57%;
 	font-size:20px;
 	word-wrap: break-word;
 	text-align:left;
-	color:white;
+	color:black;
 	font-style:italic;
+	overflow:auto;
 }
 #capaIzquierda{
 	position:absolute;
@@ -71,14 +73,20 @@
 	width:50%;
 	overflow:auto;
 }
-h1.titulos, p.info, h4, h5, h6{
+h1.titulos, p.info, h4, h5, h6, h3#total{
 	color:black;
 	padding:15px;
 	word-wrap: break-word;
 	text-align:center;
 }
-h4, h5, h6{
+h3#total, h4, h5, h6{
 	padding:3px;
+}
+h3#total{
+	color:red;
+	text-align:right;
+	padding-right:20px;
+	padding-top:7px;
 }
 div.infoMiReserva {
 	width:62%;
