--- a/Web/Stylesheet/reservas.css
+++ b/Web/Stylesheet/reservas.css
@@ -1,18 +1,28 @@
 @charset "utf-8";
 /* CSS Document parte reservas*/
 
-#capabutacasReservadas{
+#capabutacasReservadas, #capabutacasReservadasExito{
 	padding-left:30px;
 	position: relative;
 	top:0px;
 	left:0px;
-	height:57%;
+	height:54%;
 	font-size:20px;
 	word-wrap: break-word;
 	text-align:left;
 	color:black;
 	font-style:italic;
 	overflow:auto;
+	background-color:white;
+	border-radius: 10px;
+	border: 2px solid black;
+	margin-right:10px;
+	padding-top:10px;
+	padding-bottom:10px;
+}
+#capabutacasReservadasExito{
+	border-radius: 0px;
+	border: 0px;
 }
 #capaIzquierda{
 	position:absolute;
@@ -43,8 +53,10 @@
 	position:relative;
 	top:0px;
 	height:75%;
-	width:90%;
+	width:87%;
 	left:5%;
+	border: 5px solid black;
+	border-radius: 10px;
 }
 
 #txtDNI{
@@ -66,13 +78,17 @@
 	font-size:20px;
 }
 #capaInformacion{
+	background-color:white;
 	position:relative;
 	top:0;
 	left:25%;
 	height:60%;
 	width:50%;
 	overflow:auto;
+	border-radius: 10px;
+	border: 2px solid black;
 }
+
 h1.titulos, p.info, h4, h5, h6, h3#total{
 	color:black;
 	padding:15px;
@@ -86,7 +102,7 @@ h3#total{
 	color:red;
 	text-align:right;
 	padding-right:20px;
-	padding-top:7px;
+	padding-top:5px;
 }
 div.infoMiReserva {
 	width:62%;
@@ -137,4 +153,19 @@ h2.infoDNIMiReserva{
 	width:67%;
 	text-align:center;
 	font-style:italic;
+}
+img#imgExitoCompra, img#imgExitoCompraInvertida{
+	position:absolute;
+	padding:20px;
+	top:50px;
+	left:0px;
+	height:60%;
+	width:20%;
+}
+img#imgExitoCompraInvertida{
+	left:75%;
+	-moz-transform: scaleX(-1);
+	-o-transform: scaleX(-1);
+	-webkit-transform: scaleX(-1);
+	transform: scaleX(-1);
 }
