--- a/Web/Stylesheet/principal.css
+++ b/Web/Stylesheet/principal.css
@@ -6,7 +6,23 @@
 	font-family: Helvetica Neue; 
 	cursor:default;
 }
+h2{
+	color:rgba(255,255,255,1);
+	text-align:	center;
+	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+}
+h3{
+	color:rgba(255,255,255,1);
+	text-align:	center;
+	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+}
+body{
+	background-image:url(../imagenes/fondoraro.png);
+	background-size: 100%;
+}
 #capacontenedora{
+	/*imagen transparente*/
+	background-image:url(../imagenes/capacontenedora.png);
 	margin-top: 0px;
 	margin-right: 0px;
 	margin-left: -480px;
@@ -14,12 +30,13 @@
 	position:absolute;
 	top: 0px;
 	left:50%;
-	height:700px;	
+	height:680px;	
+	z-index:1;
 	}
 #capamenu{
-	background-color:#F36;
 	position:relative;
 	height:auto;
+	z-index:1;
 	}
 #capadetalles{		
 	background-color:#99F;
@@ -36,7 +53,6 @@
 	width:150px;
 }
 #capacontenedoraobrasquery{	
-	background-color:#99F;
 	position:relative;
 	height:600px;
 	width:300px;
@@ -58,7 +74,6 @@
 	/*src:"";*/
 }
 #capacalendarioyhora{
-	background-color:#63C;
 	position:relative;
 	height:350px;
 	width:216px;
@@ -66,7 +81,7 @@
 }
 #contenedoraCapaCalendario{
 	border: 4px solid black;
-	background-color:#CF6;
+	background-image:url(../imagenes/capacontenedora.png);
 	position:relative;
 	height:350px;
 	width:952px;
@@ -85,7 +100,6 @@
 }
 #capaobras{
 	border-left: 4px solid black;
-	background-color:#F00;
 	position: absolute;
 	width: 732px;
 	height:350px;	
@@ -115,8 +129,7 @@
 /*menú*/
 header{	
 	width:960px;
-	height:200px;
-	background:#CFC;	
+	height:200px;		
 }
 div.contenedor{
 	width: 192px;
@@ -124,31 +137,31 @@ div.contenedor{
 	float:left;
 	transition: height .4s;
 }
-div#uno{
-	background-color: #000;
+div#uno{	
 	border-top-left-radius: 50%;
+	background-image:url(../imagenes/capa1.png);	
 }
 div#dos{
-	background-color: #000;
+	background-image:url(../imagenes/capa2.png);	
 }
 div#tres{
-	background-color: #000;
+	background-image:url(../imagenes/capa3.png);		
 }
 div#cuatro{
-	background-color: #000;
+	background-image:url(../imagenes/capa4.png);	
 }
-div#cinco{
-	background-color: #000;
+div#cinco{	
 	border-top-right-radius: 50%;
+	background-image:url(../imagenes/capa5.png);
 }
 /*footer*/
 #capaFooter{
+	background-image:url(../imagenes/capacontenedora.png);
 	position:absolute;
-	background-color:#C00;
 	bottom:0px;
 	height:50px;
 	width:960px;
-	margin-bottom:30px;
+	margin-bottom:15px;
 	border-bottom-right-radius: 4em;
 	border-bottom-left-radius: 4em;
 	border-top-color:#000;
@@ -161,6 +174,13 @@ div#cinco{
 	-moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
 	-webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
 }
+#imagenCandado{
+	position:relative;
+	width:50px;
+	height:50px;
+	background-image:url(../imagenes/candado.png);	
+	left:455px;;
+	}
 /*efectos */
 img.icon{
 	display: block;
@@ -175,10 +195,9 @@ img.icon{
 
 p.texto{
 	font-size: 1.2em;
-	color:white;
 	text-align: center;
-	opacity: .6;
-	transition: padding-top .4s;	
+	transition: padding-top .4s;
+	color:rgba(255,255,255,1);	
 }
 
 div.contenedor:hover{
@@ -187,11 +206,149 @@ div.contenedor:hover{
 
 div.contenedor:hover p.texto{
 	padding-top: 20px;
-	opacity: 1;
 	font-size: 1.8em;
+	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
 }
 
 div.contenedor:hover img.icon{
 	box-shadow:0px 0px 0px 0px rgba(255,255,255,.6);	
 }
+/*capa de claves de administrador*/
+#entradaAdmin{
+	background-image:url(../imagenes/entraradmin.png);
+	position:relative;
+	left:50%;
+	margin-left:-150px;
+	top:20px;
+	height:300px;
+	width: 300px;
+	}
+div#entradaAdmin p{
+	color:rgba(0,0,0,1);
+	text-shadow: -2px 0 white, 0 2px white, 2px 0 white, 0 -2px white;	
+}
+#user{
+	position:relative;
+	left:25%;
+	top:140px;
+}
+#pass{
+	position:relative;
+	left:25%;
+	top:150px;		
+}
+#submit{
+	position:relative;
+	left:40%;	
+	top:170px;
+}
+/*productos de pops*/
+#palomita1{	
+	background-image:url(../imagenes/palomitas1.png);
+	position:absolute;
+	left:20%;
+	top:10px;
+	height:150px;
+	width: 150px;
+	box-shadow: 0px 0px 10px 4px #993300;;
+	border-style:solid;
+	border-width:2px;
+	border-color:#993300;
+	transition: 2.5s ease;
+	-moz-transition: 2.5s ease; 
+ 	-webkit-transition: 2.5s ease; 
+ 	-o-transition: 2.5s ease;
+}
+#palomita2{
+	background-image:url(../imagenes/palomitas2.png);
+	position:absolute;
+	left:40%;
+	top:10px;
+	height:150px;
+	width:150px;
+	box-shadow: 0px 0px 10px 4px #FF6666;
+	border-style:solid;
+	border-width:2px;
+	border-color:#FF6666;
+	transition: 2.5s ease;
+	-moz-transition: 2.5s ease; 
+ 	-webkit-transition: 2.5s ease; 
+ 	-o-transition: 2.5s ease;
+}
+#palomita3{
+	background-image:url(../imagenes/palomitas3.png);
+	position:absolute;
+	background-position:center;
+	background-size:100%;
+	background-repeat:no-repeat;
+	left:60%;
+	top:10px;
+	height:150px;
+	width: 150px;
+	box-shadow: 0px 0px 10px 4px rgba(255,204,51,1);
+	border-style:solid;
+	border-width:2px;
+	border-color:rgba(255,204,51,1);
+	transition: 2.5s ease;
+	-moz-transition: 2.5s ease; 
+ 	-webkit-transition: 2.5s ease; 
+ 	-o-transition: 2.5s ease;
+}
 
+#refresco1{
+	background-image:url(../imagenes/refresco1.png);
+	position:absolute;
+	left:20%;
+	top:180px;
+	height:150px;
+	width: 150px;
+	box-shadow: 0px 0px 10px 4px #993300;
+	border-style:solid;
+	border-width:2px;
+	border-color:#993300;
+	transition: 2.5s ease;
+	-moz-transition: 2.5s ease; 
+ 	-webkit-transition: 2.5s ease; 
+ 	-o-transition: 2.5s ease;
+}
+#refresco2{	
+	background-image:url(../imagenes/refresco2.png);
+	position:absolute;
+	left:40%;
+	top:180px;
+	height:150px;
+	width:150px;
+	box-shadow: 0px 0px 10px 4px #FF9900;
+	border-style:solid;
+	border-width:2px;
+	border-color:#FF9900;
+	transition: 2.5s ease;
+	-moz-transition: 2.5s ease; 
+ 	-webkit-transition: 2.5s ease; 
+ 	-o-transition: 2.5s ease;		
+}
+#refresco3{	
+	background-image:url(../imagenes/refrescos3.png);
+	background-position:center;
+	background-size:100%;
+	background-repeat:no-repeat;	
+	position:absolute;
+	left:60%;
+	top:180px;
+	height:150px;
+	width: 150px;
+	box-shadow: 0px 0px 10px 4px #FFFF66;
+	border-style:solid;
+	border-width:2px;
+	border-color:#FFFF66;
+	transition: 2.5s ease;
+	-moz-transition: 2.5s ease; 
+ 	-webkit-transition: 2.5s ease; 
+ 	-o-transition: 2.5s ease;	
+}
+#contenedoraCapaCalendario div#palomita1:hover,div#palomita2:hover,div#palomita3:hover,div#refresco1:hover,div#refresco2:hover,div#refresco3:hover{
+	transform : rotate(360deg);	
+	-moz-transform : rotate(360deg);	
+	-o-transform : rotate(360deg);	
+	-webkit-transform : rotate(360deg);	
+	}
