--- a/Web/Stylesheet/principal.css
+++ b/Web/Stylesheet/principal.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /* CSS Document */
 *{
 	margin:0px;
@@ -21,8 +21,6 @@ body{
 	background-size: 100%;
 }
 #capacontenedora{
-	/*imagen transparente*/
-	background-image:url(../imagenes/capacontenedora.png);
 	margin-top: 0px;
 	margin-right: 0px;
 	margin-left: -480px;
@@ -80,8 +78,10 @@ body{
 	top:-3px;		
 }
 #contenedoraCapaCalendario{
+	background: -webkit-linear-gradient( #F90, #F60);
+   	background: -moz-linear-gradient(  rgba(108,0,0,1), rgba(153,0,0,1));
+   	background: -o-linear-gradient( #999, #666);
 	border: 4px solid black;
-	background-image:url(../imagenes/capacontenedora.png);
 	position:relative;
 	height:350px;
 	width:952px;
@@ -156,7 +156,9 @@ div#cinco{
 }
 /*footer*/
 #capaFooter{
-	background-image:url(../imagenes/capacontenedora.png);
+	background: -webkit-linear-gradient(#F90, #9B0000);
+   	background: -moz-linear-gradient(#F90, #9B0000);
+   	background: -o-linear-gradient(#F90, #9B0000);
 	position:absolute;
 	bottom:0px;
 	height:50px;
@@ -178,8 +180,8 @@ div#cinco{
 	position:relative;
 	width:50px;
 	height:50px;
-	background-image:url(../imagenes/candado.png);	
-	left:455px;;
+	bottom:23px;
+	left:850px;
 	}
 /*efectos */
 img.icon{
@@ -201,7 +203,7 @@ p.texto{
 }
 
 div.contenedor:hover{
-	height:234px;
+	height:232px;
 }
 
 div.contenedor:hover p.texto{
