--- a/Web/Stylesheet/principal.css
+++ b/Web/Stylesheet/principal.css
@@ -78,9 +78,9 @@ body{
 	top:-3px;		
 }
 #contenedoraCapaCalendario{
-	background: -webkit-linear-gradient( #F90, #F60);
-   	background: -moz-linear-gradient(  rgba(108,0,0,1), rgba(153,0,0,1));
-   	background: -o-linear-gradient( #999, #666);
+	background: -webkit-linear-gradient(rgba(108,0,0,1), rgba(153,0,0,1));
+   	background: -moz-linear-gradient(rgba(108,0,0,1), rgba(153,0,0,1));
+   	background: -o-linear-gradient(rgba(108,0,0,1), rgba(153,0,0,1));
 	border: 4px solid black;
 	position:relative;
 	height:350px;
