--- a/Web/Stylesheet/reservas.css
+++ b/Web/Stylesheet/reservas.css
@@ -93,7 +93,7 @@
 	border: 2px solid black;
 }
 
-h1.titulos, p.info, h4, h5, h6, h3#total{
+h1.titulos, p.info, h4, h5, h6, h3#total,h1.titulosBlack{
 	color:black;
 	padding:15px;
 	word-wrap: break-word;
@@ -103,10 +103,16 @@ h3#total, h4, h5, h6{
 	padding:3px;
 }
 h3#total{
-	color:red;
+	color:rgba(255,255,255,0.8);
 	text-align:right;
 	padding-right:20px;
 	padding-top:5px;
+}
+h1.titulos{
+	color:white;
+}
+h1.titulosBlack{
+	color:black;
 }
 div.infoMiReserva {
 	width:62%;
@@ -118,7 +124,7 @@ div.infoMiReserva {
 }
 
 p.info{
-	color:red;
+	color:rgba(255,255,255,0.8);
 	width:97%;
 	font-size:15px;
 }
